libs/modkit-macros/tests/ui/fail/unknown_capability_with_suggestion.rs
use modkit_macros::module;

#[module(name="x", capabilities=[rst])]
pub struct X;

fn main() {}

