libs/modkit-macros/tests/ui/fail/unknown_capability_with_suggestion.stderr
error: unknown capability 'rst'
              = help: did you mean one of: rest, rest_host?
 --> tests/ui/fail/unknown_capability_with_suggestion.rs:3:34
  |
3 | #[module(name="x", capabilities=[rst])]
  |                                  ^^^
